# pystemd

./: .gitignore  .packit.yml  .pre-commit-config.yaml  .travis.yml  CHANGES.md  CONTRIBUTING.md  E2E_TESTING.md  LICENSE  LICENSE.txt  MANIFEST.in  PATENTS  README.md  mkosi.build.chroot  mkosi.conf  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  e2e-tests.yml  publish_to_pypi.yml
_docs/: centos7.md  daemon.md  journal.md  pystemd.run.md
e2e/: conftest.py  test_dbus.py  test_manager.py  test_pystemd_run.py  test_transient_units.py  test_unit.py
examples/: connect_to_remote_bus.py  future_cpucap_method.py  future_cpucap_pool.py  future_cpucap_process.py  manager.py  monitor.py  monitor_all_units_from_signal.py  monitor_from_signal.py  shell.py  start_multiple_transient_unit.py  start_transient_unit.py  unit.py
pystemd/: __init__.py  __init__.pyi  __version__.py  base.py  base.pyi  cutils.pyi  cutils.pyx  daemon.pyi  daemon.pyx  dbusc.pxd  dbusc_v237.pxi  dbusexc.pyi  dbusexc.pyx  dbuslib.pyi  dbuslib.pyx  exceptions.py  futures.py  journal.pyi  journal.pyx  manager.pyi  run.py  unit.py  utils.py  utils.pyi
pystemd/DBus/: __init__.py
pystemd/machine1/: __init__.py  machine.py  manager.py
pystemd/systemd1/: __init__.py  manager.py  manager.pyi  unit.py  unit.pyi  unit_signatures.py
tests/: test_base.py  test_daemon.py  test_dbus_arg_parsing.py  test_dbuslib.py  test_futures.py  test_journal.py  test_pickle.py  test_unit_signatures.py  test_utils.py  test_version.py
